test/tests/operators/from_mysql/tls/error_tls_invalid_certfile.txt
error: `tls.certfile` path is not a valid file: /nonexistent/path/client-cert.pem
  --> tests/operators/from_mysql/tls/error_tls_invalid_certfile.tql:12:16
   |
12 |            tls={certfile: "/nonexistent/path/client-cert.pem"}
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
   |
